<resources>
    <string name="app_name">SingleReport</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="error">⚠Error</string>
    <string name="ok">OK</string>
    <string name="no_network_msg">No Network,please check.</string>
    <string name="permission_dined_msg">Permission dined,finish app...</string>
    <string name="scan_device">Scan devices</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="out">out</string>
    <string name="open_b_msg">Please open the bluetooth.</string>
    <string name="no_bluetooth_msg">This mobile donˋt have bluetooth.</string>
    <string name="bluetooth_pair">Bluetooth Pair</string>
    <string name="already_paired">Already Paired.</string>
    <string name="close">CLOSE</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="controller">Controller</string>
    <string name="language">Language</string>
    <string name="test_mode">Test mode</string>
    <string name="action_debug">Action Debug</string>
    <string name="app_info">App Info</string>
    <string name="moblie">Mobile</string>
    <string name="system_time">System time</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="network_state">Network state</string>
    <string name="device">Device</string>
    <string name="cancel">cancel</string>
    <string name="clear">clear</string>
    <string name="search">Search</string>
    <string name="waring">Waring</string>
</resources>