<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/controller">
        <menu>
            <item android:id="@+id/menu_language"
                android:visible="false"
                android:title="@string/language" />

            <item android:id="@+id/menu_offline"
                android:title="@string/offline"
                android:visible="false"
                app:actionLayout="@layout/switcher"/>


            <item android:id="@+id/menu_test_mode"
                android:title="@string/test_mode"
                android:visible="true"
                app:actionLayout="@layout/switcher"/>

            <item android:id="@+id/menu_action"
                android:title="@string/action_debug"
                android:visible="true"
                app:actionLayout="@layout/switcher"/>

            <item android:id="@+id/data_refresh"
                android:title="更新資料" />

            <item android:id="@+id/app_info"
                android:title="@string/app_info" />
        </menu>
    </item>

</menu>